<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>graph-algorithms-parent</artifactId>
        <groupId>org.neo4j</groupId>
        <version>3.5.4.1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>graph-algorithms-tests</artifactId>

    <name>Neo4j Graph Algorithms :: Tests</name>
    <description>Efficient Graph Algorithms for Neo4j - Tests</description>

    <properties>
        <logback.version>1.0.13</logback.version>
        <slf4j.version>1.7.5</slf4j.version>
        <junit.version>4.12</junit.version>
        <rr.version>2.8.0</rr.version>
        <mockito.version>1.10.19</mockito.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>graph-algorithms-algo</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>graph-algorithms-core</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.neo4j.community</groupId>
            <artifactId>it-test-support</artifactId>
            <version>${neo4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.neo4j.test</groupId>
            <artifactId>neo4j-harness</artifactId>
            <version>${neo4j.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j-common</artifactId>
            <version>${neo4j.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j-io</artifactId>
            <version>${neo4j.version}</version>
            <scope>test</scope>
            <type>test-jar</type>
        </dependency>

        <dependency>
            <groupId>org.neo4j.community</groupId>
            <artifactId>it-test-support</artifactId>
            <version>${neo4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j-kernel</artifactId>
            <version>${neo4j.version}</version>
        </dependency>

        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-core</artifactId>
            <version>4.0.2</version>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j-kernel-api</artifactId>
            <version>${neo4j.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j-kernel</artifactId>
            <version>${neo4j.version}</version>
            <scope>test</scope>
            <type>test-jar</type>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>procedure-compiler</artifactId>
            <version>${neo4j.version}</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.carrotsearch.randomizedtesting</groupId>
            <artifactId>randomizedtesting-runner</artifactId>
            <version>${rr.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>

            <!-- Disable Surefire by binding it to a non-existent phase. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
                <executions>
                    <execution>
                        <id>default-test</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>

            <!-- Configure common settings for RR/JUnit4 runner. -->
            <plugin>
                <groupId>com.carrotsearch.randomizedtesting</groupId>
                <artifactId>junit4-maven-plugin</artifactId>
                <version>${rr.version}</version>

                <!-- Defaults for all tests (ITs and Unit). -->
                <configuration>
                    <heartbeat>10</heartbeat>
                    <jvmOutputAction>pipe,ignore</jvmOutputAction>
                    <leaveTemporary>true</leaveTemporary>
                    <ifNoTests>warn</ifNoTests>
                    <maxMemory>1g</maxMemory>
                    <parallelism>1</parallelism>
                    <printSummary>true</printSummary>
                    <jvmArgs><jvmArg>-ea</jvmArg></jvmArgs>

                    <listeners>
                        <report-text showThrowable="true" showStackTraces="true" showOutput="always" showStatusOk="true"
                                     showStatusError="true" showStatusFailure="true" showStatusIgnored="true" showSuiteSummary="true"/>
                    </listeners>

                    <systemProperties combine.children="append">
                        <arg.common>arg.common</arg.common>
                    </systemProperties>
                </configuration>

                <executions>
                    <!-- Defaults for unit tests. -->
                    <execution>
                        <id>unit-tests</id>
                        <phase>test</phase>
                        <goals>
                            <goal>junit4</goal>
                        </goals>
                        <inherited>true</inherited>
                        <configuration>
                            <includes>
                                <include>**/Test*.class</include>
                                <include>**/*Test.class</include>
                            </includes>
                            <excludes>
                                <exclude>**/*$*</exclude>
                            </excludes>
                        </configuration>
                    </execution>

                    <!-- Defaults for integration tests. -->
                    <execution>
                        <id>integration-tests</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>junit4</goal>
                        </goals>
                        <inherited>true</inherited>
                        <configuration>
                            <includes>
                                <include>**/IT*.class</include>
                                <include>**/*IT.class</include>
                            </includes>
                            <excludes>
                                <exclude>**/*$*</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
